--- a/Thesis-Template0_1_0/Title/title.tex
+++ b/Thesis-Template0_1_0/Title/title.tex
@@ -3,9 +3,9 @@
 \begin{titlepage}
 
 \begin{center}
-ĐẠI HỌC QUỐC GIA THÀNH PHỐ HỒ CHÍ MINH\\
+\textbf{ĐẠI HỌC QUỐC GIA THÀNH PHỐ HỒ CHÍ MINH\\
 TRƯỜNG ĐẠI HỌC KHOA HỌC TỰ NHIÊN\\
-\textbf{KHOA ĐIỆN TỬ - VIỄN THÔNG}\\[2cm]
+KHOA ĐIỆN TỬ - VIỄN THÔNG}\\[2cm]
 
 
 { \Large \bfseries \tenSV \\[2cm] } 
@@ -40,26 +40,29 @@ Tp. Hồ Chí Minh, tháng 07/2023
 \myemptypage
 
 \begin{center}
-ĐẠI HỌC QUỐC GIA THÀNH PHỐ HỒ CHÍ MINH\\
+\textbf{ĐẠI HỌC QUỐC GIA THÀNH PHỐ HỒ CHÍ MINH\\
 TRƯỜNG ĐẠI HỌC KHOA HỌC TỰ NHIÊN\\
-\textbf{KHOA ĐIỆN TỬ - VIỄN THÔNG}\\[2cm]
-
-
-{\large \bfseries \tenSV\space - \mssv \\[2cm]}
-
-%Tên đề tài Khóa luận tốt nghiệp/Đồ án tốt nghiệp
-
-{ \Large \bfseries \tenKL \\[2cm] } 
-
+KHOA ĐIỆN TỬ - VIỄN THÔNG}\\[2cm]
 
 %Chọn trong các dòng sau
 \large KHÓA LUẬN TỐT NGHIỆP CỬ NHÂN\\
 %\large ĐỒ ÁN TỐT NGHIỆP CỬ NHÂN\\
-\large NGÀNH KỸ THUẬT ĐIỆN TỬ - VIỄN THÔNG\\
+\large NGÀNH KỸ THUẬT ĐIỆN TỬ - VIỄN THÔNG\\[2cm]
 %Đưa vào dòng này nếu thuộc chương trình Chất lượng cao, hoặc lớp Cử nhân tài năng
 % \large CHƯƠNG TRÌNH CHÍNH QUY\\[2cm]
-\large CHƯƠNG TRÌNH CHẤT LƯỢNG CAO\\[2cm]
+% \large CHƯƠNG TRÌNH CHẤT LƯỢNG CAO\\[2cm]
 %\large CHƯƠNG TRÌNH CỬ NHÂN TÀI NĂNG\\[2cm]
+
+{ \Large \bfseries \tenKL \\[2cm] } 
+
+% {\large \bfseries \tenSV\space - \mssv \\[2cm]}
+
+%Tên đề tài Khóa luận tốt nghiệp/Đồ án tốt nghiệp
+
+% { \Large \bfseries \tenKL \\[2cm] } 
+
+{\bfseries Họ và tên sinh viên: \tenSV\\
+Mã số SV: \mssv\\[2cm]}
 
 \textbf{NGƯỜI HƯỚNG DẪN KHOA HỌC}\\
 \tenGVHD
